--- a/chatbot-package/tsconfig.json
+++ b/chatbot-package/tsconfig.json
@@ -18,8 +18,7 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": false,
-        "composite": true
+        "noEmit": false
     },
     "include": [
         "src/**/*"
